Fix header position on smaller width displays

--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -25,6 +25,12 @@ header
 	font-size: x-large;
 	height: var(--header-height);
 	text-wrap: nowrap;
+
+    @media only screen and (max-width: 290px)
+    {
+        @include flex(row, 0 1 auto);
+        padding: 0 16px;
+    }
 }
 
 .pre-nav
