--- a/_styles/nav-toggle.scss
+++ b/_styles/nav-toggle.scss
@@ -1,7 +1,9 @@
 .nav-toggle
 {
 	box-sizing: border-box;
-	position: relative;
+	position: absolute;
+    right: 0px;
+    top: 6px;
 	display: none;
 	border-style: outset;
 	border-width: 2px;
@@ -9,8 +11,10 @@
 	padding: 2px;
 	border-radius: 0.5em;
 	flex-grow: 0;
-	margin: auto 2em auto auto;
+	margin: auto 16px auto auto;
 	max-width: 48px;
+    min-width: 48px;
+    width: 48px;
 	max-height: 48px;
 	height: 48px;
 	background-color: var(--bg-primary);
@@ -82,5 +86,13 @@
 	.nav-toggle
 	{
 		@include flex(column, 1 1 auto);
+	}
+}
+
+@media only screen and (max-width: 290px)
+{
+	.nav-toggle
+    {
+        margin: auto 8px auto auto;
 	}
 }
